<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"
        android:layout_marginTop="50dp"
        android:text="@string/name_Main">
    </TextView>

    <Button
        android:id="@+id/btn_giai_pt_bac3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Handle_pt_bac3"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/teal_700"
        >
    </Button>
    <Button
        android:id="@+id/btn_giai_he_pt_2an"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Handle_he_pt"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/teal_700"
        >
    </Button>

</LinearLayout>